--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
 
 
 
-
-        <script src="assets/javascript/giphy.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script type="text/javascript"></script>
     </div>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="assets/javascript/giphy.js"></script>
+
 </body>
 
 </html>
